feat. 견종별 이미지 추가
- FB 데이터 Insert 시 Timestamp 한국시간으로 수정

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,8 @@
 
         <item name="android:fontFamily">@font/notosanskr_regular</item>
     </style>
-
-
+    <style name="ImageViewRounded" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">12dp</item>
+    </style>
 </resources>
