--- a/app/src/main/res/layout/item_info_genetic.xml
+++ b/app/src/main/res/layout/item_info_genetic.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
@@ -32,14 +33,15 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/img_info"
                 android:layout_width="74dp"
                 android:layout_height="74dp"
                 android:layout_marginEnd="12dp"
-                android:src="@drawable/ic_star_gradient"
                 android:scaleType="centerCrop"
-                android:backgroundTint="#DDDDDD"/>
+                android:backgroundTint="#DDDDDD"
+                android:src="@drawable/ic_star_gradient"
+                app:shapeAppearanceOverlay="@style/ImageViewRounded" />
             <TextView
                 android:id="@+id/tv_des"
                 android:layout_width="0dp"
