--- a/app/src/main/res/layout/activity_pet_name.xml
+++ b/app/src/main/res/layout/activity_pet_name.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:padding="24dp">
+    android:padding="20dp">
 
     <!-- 나중에 등록하기 버튼 (상단 오른쪽 살짝 아래로 이동) -->
     <ImageView
@@ -29,7 +29,7 @@
         android:id="@+id/progressContainer"
         android:layout_width="100dp"
         android:layout_height="4dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="78dp"
         app:layout_constraintTop_toBottomOf="@id/imgRegisterLater"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -51,13 +51,17 @@
     </FrameLayout>
 
     <!-- 입력 타이틀 -->
-    <ImageView
+
+    <TextView
         android:id="@+id/imgPetNameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/enter_pet_name_label"
-        android:contentDescription="아이 이름 입력 타이틀"
+        android:layout_marginTop="12dp"
+        android:text="아이의 이름을\n입력해주세요"
+        android:textColor="#000000"
+        android:textSize="27sp"
+        android:textStyle="bold"
+        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/progressContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -67,7 +71,7 @@
         android:id="@+id/nameInputContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintTop_toBottomOf="@id/imgPetNameTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -100,38 +104,47 @@
         <ImageView
             android:id="@+id/underline"
             android:layout_width="match_parent"
-            android:layout_height="4dp"
+            android:layout_height="2dp"
             android:layout_marginTop="32dp"
+            android:layout_marginHorizontal="32dp"
             android:layout_gravity="bottom"
             android:src="@drawable/bg_input_underline" />
     </FrameLayout>
 
     <!-- 하단 버튼 -->
-
-    <!-- 다음 버튼 -->
-    <ImageButton
-        android:id="@+id/btnPrev"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/layoutBottomBtn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="@null"
-        android:contentDescription="이전"
-        android:src="@drawable/ic_arrow_back2"
+        android:orientation="horizontal"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnNext"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <ImageButton
-        android:id="@+id/btnNext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="@null"
-        android:contentDescription="다음"
-        android:src="@drawable/ic_arrow_forward"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.944"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/btnPrev"
+            android:layout_width="wrap_content"
+            android:layout_height="74dp"
+            android:layout_weight="0.2"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/btn_next_disabled"
+            android:textColor="@color/black"
+            android:text="이전"
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
+
+        <Button
+            android:id="@+id/btnNext"
+            android:layout_width="wrap_content"
+            android:layout_height="74dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_basic"
+            android:textColor="@color/btn_next_text_selector"
+            android:enabled="false"
+            android:text="다음"
+            android:textSize="20sp"
+            android:stateListAnimator="@null"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
