--- a/app/src/main/res/layout/activity_pet_weight.xml
+++ b/app/src/main/res/layout/activity_pet_weight.xml
@@ -9,7 +9,7 @@
     android:padding="20dp">
 
     <!-- 나중에 등록하기 버튼 -->
-    <ImageButton
+    <ImageView
         android:id="@+id/imgRegisterLater"
         android:layout_width="100dp"
         android:layout_height="48dp"
@@ -80,10 +80,10 @@
             android:layout_marginEnd="8dp"
             android:hint="5.3"
             android:inputType="numberDecimal"
-            android:textColor="#000000"
             android:textSize="18sp"
             android:maxLines="1"
             android:gravity="center"
+            android:backgroundTint="#CECECE"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/labelKg"
             app:layout_constraintTop_toTopOf="parent" />
